add business understanding

--- a/Syria Tel Churn Prediction.ipynb
+++ b/Syria Tel Churn Prediction.ipynb
@@ -5,7 +5,9 @@
    "metadata": {},
    "source": [
     "SYRIATEL CUSTOMER CHURN PREDICTION\n",
+    "\n",
     "AUTHOR : KELVIN MWAURA NJUNG'E\n",
+    "\n",
     "COHORT : DSFT08 (REMOTE)\n"
    ]
   },
@@ -62,6 +64,20 @@
     "\n",
     "Long-term monitoring and adjustments of the model post-deployment."
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "ALIIGNMENT AND CLARIFICATION\n",
+    "\n",
+    "It is crucial to ensure that all stakeholders have a unified understanding of the project's objectives and scope. Regular meetings and updates will be scheduled to maintain alignment and address any discrepancies in expectations."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   },
   {
    "cell_type": "code",
