import python libraries

--- a/Syria Tel Churn Prediction.ipynb
+++ b/Syria Tel Churn Prediction.ipynb
@@ -56,7 +56,8 @@
     "\n",
     "Developing a robust classification model to predict churn.\n",
     "\n",
-    "Providing actionable insights and recommendations for retention strategies.\n",
+    "Providing actionable insights and recommendations for retention of more customers\n",
+    "\n",
     "\n",
     "Out-of-Scope:\n",
     "\n",
@@ -69,15 +70,106 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "ALIIGNMENT AND CLARIFICATION\n",
+    "RESEARCH OBJECTIVES\n",
     "\n",
-    "It is crucial to ensure that all stakeholders have a unified understanding of the project's objectives and scope. Regular meetings and updates will be scheduled to maintain alignment and address any discrepancies in expectations."
+    "- Identify key features that determine customer churn. \n",
+    "\n",
+    "    We Analyze the relative importance of various features to uncover the key factors behind customer churn in the telecommunications sector. By pinpointing the most impactful contributors to churn, SyriaTel can gain valuable insights that will guide in them making strategic decisions, optimize resource allocation, and implement targeted initiatives to mitigate customer attrition effectively.\n",
+    "\n",
+    "\n",
+    "- Develop the most suitable model to predict customer churn.\n",
+    "\n",
+    " To compare the performance of different machine learning models to identify the most effective model for predicting churn.\n",
+    "\n",
+    " By comparing the performance of various models, SyriaTel can confidently select the most efficient one. This ensures that resources are optimally allocated for the implementation of churn-reduction strategies.\n",
+    "\n",
+    "- Establish customer retention strategies to reduce churn.\n",
+    "\n",
+    " This endeavor is motivated by the notion that by accurately identifying customers at risk of churning, SyriaTel can proactively implement targeted retention strategies. These strategies may involve offering incentives, improving customer service experiences, and tailoring marketing approaches to align with the preferences of the at-risk customer segments. \n",
+    "\n",
+    "\n",
+    "\n",
+    "SUCCESS METRICS\n",
+    "\n",
+    "\n",
+    "- Achieve a high recall score  to ensure most at-risk customers are correctly identified.\n",
+    "\n",
+    "- Identify key features that significantly contribute to customer churn.\n",
+    "\n",
+    "- Provide clear, actionable recommendations for reducing churn and improving customer retention.\n",
+    "\n",
+    "- Show the effectiveness of the churn prediction model in enabling proactive retention strategies and minimizing revenue losses.\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "DATA UNDERSTANDING\n",
+    "\n",
+    "\n",
+    "To better serve the identified consumers and clearly project the problem(s) stated in the background, I will use the Churn in Telecom's dataset from Kaggle (https://www.kaggle.com/datasets/becksddf/churn-in-telecoms-dataset).\n",
+    "\n",
+    "\n",
+    "\n",
+    "The dataset contains 3333 ROWS and 21 columns, including information about the state, account length, area code, phone number, international plan, voice mail plan, number of voice mail messages, total day minutes, total day calls, total day charge, total evening minutes, total evening calls, total evening charge, total night minutes, total night calls, total night charge, total international minutes, total international calls, total international charge, customer service calls and churn.\n",
+    "\n",
+    "\n",
+    "DATASET FEATURES:\n",
+    "\n",
+    "\n",
+    "State: The state the customer lives in\n",
+    "\n",
+    "Account Length: The number of days the customer has had an account.\n",
+    "\n",
+    "Area Code: The area code of the customer\n",
+    "\n",
+    "Phone Number: The phone number of the customer\n",
+    "\n",
+    "International Plan: True if the customer has the international plan, otherwise false.\n",
+    "\n",
+    "Voice Mail Plan: True if the customer has the voice mail plan, otherwise false.\n",
+    "\n",
+    "Number Vmail Messages: the number of voicemails the customer has sent.\n",
+    "\n",
+    "Total Day Minutes: total number of minutes the customer has been in calls during the day.\n",
+    "\n",
+    "Total Day Calls: total number of calls the user has done during the day.\n",
+    "\n",
+    "Total Day Charge: total amount of money the customer was charged by the Telecom company for calls during the day.\n",
+    "\n",
+    "Total Eve Minutes: total number of minutes the customer has been in calls during the evening.\n",
+    "\n",
+    "Total Eve Calls: total number of calls the customer has done during the evening.\n",
+    "\n",
+    "Total Eve Charge: total amount of money the customer was charged by the Telecom company for calls during the evening.\n",
+    "\n",
+    "Total Night Minutes: total number of minutes the customer has been in calls during the night.\n",
+    "\n",
+    "Total Night Calls: total number of calls the customer has done during the night.\n",
+    "\n",
+    "Total Night Charge: total amount of money the customer was charged by the Telecom company for calls during the night.\n",
+    "\n",
+    "Total Intl Minutes: total number of minutes the user has been in international calls.\n",
+    "\n",
+    "Total Intl Calls: total number of international calls the customer has done.\n",
+    "\n",
+    "Total Intl Charge: total amount of money the customer was charged by the Telecom company for international calls.\n",
+    "\n",
+    "Customer Service Calls: number of calls the customer has made to customer service.\n",
+    "\n",
+    "Churn: true if the customer terminated their contract, otherwise false"
+   ]
   }
  ],
  "metadata": {
