--- a/Syria Tel Churn Prediction.ipynb
+++ b/Syria Tel Churn Prediction.ipynb
@@ -170,6 +170,280 @@
     "\n",
     "Churn: true if the customer terminated their contract, otherwise false"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "IMPORTING THE NECESSARY LIBRARIES  TO USE DURING THE REST OF THE PROJECT FOR CLEANING, MODELLING AND OPTIMIZING.\n",
+    "\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Data manipulation \n",
+    "import pandas as pd \n",
+    "import numpy as np \n",
+    "import os \n",
+    "\n",
+    "# Data visualization\n",
+    "import seaborn as sns \n",
+    "import matplotlib.pyplot as plt \n",
+    "import plotly.graph_objs as go\n",
+    "import plotly.express as px\n",
+    "\n",
+    "# Modeling\n",
+    "from sklearn.model_selection import train_test_split,cross_val_score,GridSearchCV \n",
+    "from imblearn.over_sampling import SMOTE,SMOTENC\n",
+    "from sklearn.metrics import f1_score,recall_score,precision_score,confusion_matrix,roc_curve,roc_auc_score,classification_report # performance metrics\n",
+    "from scipy import stats\n",
+    "from sklearn.pipeline import Pipeline\n",
+    "from sklearn.compose import ColumnTransformer\n",
+    "from sklearn.preprocessing import LabelEncoder\n",
+    "from sklearn.preprocessing import MinMaxScaler\n",
+    "from sklearn.preprocessing import StandardScaler\n",
+    "from sklearn.svm import SVC\n",
+    "\n",
+    "# Algorithms for supervised learning methods\n",
+    "from sklearn.tree import DecisionTreeClassifier\n",
+    "from sklearn.neighbors import KNeighborsClassifier\n",
+    "from sklearn import tree\n",
+    "from sklearn.ensemble import RandomForestClassifier\n",
+    "from sklearn.linear_model import LogisticRegression\n",
+    "from sklearn.model_selection import RandomizedSearchCV\n",
+    "from sklearn.model_selection import GridSearchCV\n",
+    "import xgboost as xgb\n",
+    "from xgboost import XGBClassifier\n",
+    "\n",
+    "\n",
+    "# Filtering future warnings\n",
+    "import warnings\n",
+    "warnings.filterwarnings('ignore')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Data loaded successfully from bigml_59c28831336c6604c800002a.csv\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "#I create a function to load the data and get the other attributes of the data i preparation for EDA \n",
+    "# Create a class function, and in it  define instance objects and instance methods\n",
+    "\n",
+    "class DataFrameLoader:\n",
+    "    def __init__(self, file_name):\n",
+    "        self.file_name = file_name\n",
+    "        self.data = None\n",
+    "\n",
+    "    def load_data(self):\n",
+    "        try:\n",
+    "            current_dir = os.getcwd()\n",
+    "            file_path = os.path.join(current_dir, self.file_name)\n",
+    "            self.data = pd.read_csv(file_path)\n",
+    "            print(f\"Data loaded successfully from {self.file_name}\")\n",
+    "        except FileNotFoundError:\n",
+    "            print(f\"Error: File {self.file_name} not found in the current directory.\")\n",
+    "        except Exception as e:\n",
+    "            print(f\"Error: {e}\")\n",
+    "\n",
+    "    def get_shape(self):\n",
+    "        if self.data is not None:\n",
+    "            rows, columns = self.data.shape\n",
+    "            print(f\"The DataFrame has {rows} rows and {columns} columns.\")\n",
+    "        else:\n",
+    "            print(\"Data not loaded yet. Please call the load_data() method first.\")\n",
+    "\n",
+    "    def get_info(self):\n",
+    "        if self.data is not None:\n",
+    "            print(self.data.info())\n",
+    "        else:\n",
+    "            print(\"Data not loaded yet. Please call the load_data() method first.\")\n",
+    "\n",
+    "    def describe_data(self):\n",
+    "        if self.data is not None:\n",
+    "            print(self.data.describe())\n",
+    "        else:\n",
+    "            print(\"Data not loaded yet. Please call the load_data() method first.\")\n",
+    "\n",
+    "# lets utilize  the function\n",
+    "file_name = 'bigml_59c28831336c6604c800002a.csv'\n",
+    "df_loader = DataFrameLoader(file_name)\n",
+    "\n",
+    "# Load data\n",
+    "df_loader.load_data()\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The DataFrame has 3333 rows and 21 columns.\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Get shape of the data frame\n",
+    "df_loader.get_shape()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 3333 entries, 0 to 3332\n",
+      "Data columns (total 21 columns):\n",
+      " #   Column                  Non-Null Count  Dtype  \n",
+      "---  ------                  --------------  -----  \n",
+      " 0   state                   3333 non-null   object \n",
+      " 1   account length          3333 non-null   int64  \n",
+      " 2   area code               3333 non-null   int64  \n",
+      " 3   phone number            3333 non-null   object \n",
+      " 4   international plan      3333 non-null   object \n",
+      " 5   voice mail plan         3333 non-null   object \n",
+      " 6   number vmail messages   3333 non-null   int64  \n",
+      " 7   total day minutes       3333 non-null   float64\n",
+      " 8   total day calls         3333 non-null   int64  \n",
+      " 9   total day charge        3333 non-null   float64\n",
+      " 10  total eve minutes       3333 non-null   float64\n",
+      " 11  total eve calls         3333 non-null   int64  \n",
+      " 12  total eve charge        3333 non-null   float64\n",
+      " 13  total night minutes     3333 non-null   float64\n",
+      " 14  total night calls       3333 non-null   int64  \n",
+      " 15  total night charge      3333 non-null   float64\n",
+      " 16  total intl minutes      3333 non-null   float64\n",
+      " 17  total intl calls        3333 non-null   int64  \n",
+      " 18  total intl charge       3333 non-null   float64\n",
+      " 19  customer service calls  3333 non-null   int64  \n",
+      " 20  churn                   3333 non-null   bool   \n",
+      "dtypes: bool(1), float64(8), int64(8), object(4)\n",
+      "memory usage: 524.2+ KB\n",
+      "None\n"
+     ]
+    }
+   ],
+   "source": [
+    "#knowing the data types of our data frame\n",
+    "df_loader.get_info()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "we can see that there are no missing values in our data set"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "       account length    area code  number vmail messages  total day minutes  \\\n",
+      "count     3333.000000  3333.000000            3333.000000        3333.000000   \n",
+      "mean       101.064806   437.182418               8.099010         179.775098   \n",
+      "std         39.822106    42.371290              13.688365          54.467389   \n",
+      "min          1.000000   408.000000               0.000000           0.000000   \n",
+      "25%         74.000000   408.000000               0.000000         143.700000   \n",
+      "50%        101.000000   415.000000               0.000000         179.400000   \n",
+      "75%        127.000000   510.000000              20.000000         216.400000   \n",
+      "max        243.000000   510.000000              51.000000         350.800000   \n",
+      "\n",
+      "       total day calls  total day charge  total eve minutes  total eve calls  \\\n",
+      "count      3333.000000       3333.000000        3333.000000      3333.000000   \n",
+      "mean        100.435644         30.562307         200.980348       100.114311   \n",
+      "std          20.069084          9.259435          50.713844        19.922625   \n",
+      "min           0.000000          0.000000           0.000000         0.000000   \n",
+      "25%          87.000000         24.430000         166.600000        87.000000   \n",
+      "50%         101.000000         30.500000         201.400000       100.000000   \n",
+      "75%         114.000000         36.790000         235.300000       114.000000   \n",
+      "max         165.000000         59.640000         363.700000       170.000000   \n",
+      "\n",
+      "       total eve charge  total night minutes  total night calls  \\\n",
+      "count       3333.000000          3333.000000        3333.000000   \n",
+      "mean          17.083540           200.872037         100.107711   \n",
+      "std            4.310668            50.573847          19.568609   \n",
+      "min            0.000000            23.200000          33.000000   \n",
+      "25%           14.160000           167.000000          87.000000   \n",
+      "50%           17.120000           201.200000         100.000000   \n",
+      "75%           20.000000           235.300000         113.000000   \n",
+      "max           30.910000           395.000000         175.000000   \n",
+      "\n",
+      "       total night charge  total intl minutes  total intl calls  \\\n",
+      "count         3333.000000         3333.000000       3333.000000   \n",
+      "mean             9.039325           10.237294          4.479448   \n",
+      "std              2.275873            2.791840          2.461214   \n",
+      "min              1.040000            0.000000          0.000000   \n",
+      "25%              7.520000            8.500000          3.000000   \n",
+      "50%              9.050000           10.300000          4.000000   \n",
+      "75%             10.590000           12.100000          6.000000   \n",
+      "max             17.770000           20.000000         20.000000   \n",
+      "\n",
+      "       total intl charge  customer service calls  \n",
+      "count        3333.000000             3333.000000  \n",
+      "mean            2.764581                1.562856  \n",
+      "std             0.753773                1.315491  \n",
+      "min             0.000000                0.000000  \n",
+      "25%             2.300000                1.000000  \n",
+      "50%             2.780000                1.000000  \n",
+      "75%             3.270000                2.000000  \n",
+      "max             5.400000                9.000000  \n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "# get the inferential statistics of our dataset\n",
+    "df_loader.describe_data()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "DATA PREPARATION\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
