--- a/Syria Tel Churn Prediction.ipynb
+++ b/Syria Tel Churn Prediction.ipynb
@@ -183,7 +183,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -229,7 +229,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -279,6 +279,30 @@
     "            print(self.data.describe())\n",
     "        else:\n",
     "            print(\"Data not loaded yet. Please call the load_data() method first.\")\n",
+    "    def get_head(self, num_rows=10):\n",
+    "        if self.data is not None:\n",
+    "            return self.data.head(num_rows)\n",
+    "        else:\n",
+    "            print(\"Data not loaded yet. Please call the load_data() method first.\")\n",
+    "            return None\n",
+    "    def check_duplicates(self):\n",
+    "        if self.data is not None:\n",
+    "            duplicates = self.data.duplicated().sum()\n",
+    "            if duplicates > 0:\n",
+    "                print(f\"There are {duplicates} duplicate rows in the DataFrame.\")\n",
+    "            else:\n",
+    "                print(\"No duplicate rows found in the DataFrame.\")\n",
+    "        else:\n",
+    "            print(\"Data not loaded yet. Please call the load_data() method first.\")\n",
+    "\n",
+    "    def remove_duplicates(self):\n",
+    "        if self.data is not None:\n",
+    "            original_rows = self.data.shape[0]\n",
+    "            self.data.drop_duplicates(inplace=True)\n",
+    "            new_rows = self.data.shape[0]\n",
+    "            print(f\"Removed {original_rows - new_rows} duplicate rows from the DataFrame.\")\n",
+    "        else:\n",
+    "            print(\"Data not loaded yet. Please call the load_data() method first.\")\n",
     "\n",
     "# lets utilize  the function\n",
     "file_name = 'bigml_59c28831336c6604c800002a.csv'\n",
@@ -291,6 +315,387 @@
     "\n",
     "\n",
     "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>state</th>\n",
+       "      <th>account length</th>\n",
+       "      <th>area code</th>\n",
+       "      <th>phone number</th>\n",
+       "      <th>international plan</th>\n",
+       "      <th>voice mail plan</th>\n",
+       "      <th>number vmail messages</th>\n",
+       "      <th>total day minutes</th>\n",
+       "      <th>total day calls</th>\n",
+       "      <th>total day charge</th>\n",
+       "      <th>...</th>\n",
+       "      <th>total eve calls</th>\n",
+       "      <th>total eve charge</th>\n",
+       "      <th>total night minutes</th>\n",
+       "      <th>total night calls</th>\n",
+       "      <th>total night charge</th>\n",
+       "      <th>total intl minutes</th>\n",
+       "      <th>total intl calls</th>\n",
+       "      <th>total intl charge</th>\n",
+       "      <th>customer service calls</th>\n",
+       "      <th>churn</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>KS</td>\n",
+       "      <td>128</td>\n",
+       "      <td>415</td>\n",
+       "      <td>382-4657</td>\n",
+       "      <td>no</td>\n",
+       "      <td>yes</td>\n",
+       "      <td>25</td>\n",
+       "      <td>265.1</td>\n",
+       "      <td>110</td>\n",
+       "      <td>45.07</td>\n",
+       "      <td>...</td>\n",
+       "      <td>99</td>\n",
+       "      <td>16.78</td>\n",
+       "      <td>244.7</td>\n",
+       "      <td>91</td>\n",
+       "      <td>11.01</td>\n",
+       "      <td>10.0</td>\n",
+       "      <td>3</td>\n",
+       "      <td>2.70</td>\n",
+       "      <td>1</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>OH</td>\n",
+       "      <td>107</td>\n",
+       "      <td>415</td>\n",
+       "      <td>371-7191</td>\n",
+       "      <td>no</td>\n",
+       "      <td>yes</td>\n",
+       "      <td>26</td>\n",
+       "      <td>161.6</td>\n",
+       "      <td>123</td>\n",
+       "      <td>27.47</td>\n",
+       "      <td>...</td>\n",
+       "      <td>103</td>\n",
+       "      <td>16.62</td>\n",
+       "      <td>254.4</td>\n",
+       "      <td>103</td>\n",
+       "      <td>11.45</td>\n",
+       "      <td>13.7</td>\n",
+       "      <td>3</td>\n",
+       "      <td>3.70</td>\n",
+       "      <td>1</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>NJ</td>\n",
+       "      <td>137</td>\n",
+       "      <td>415</td>\n",
+       "      <td>358-1921</td>\n",
+       "      <td>no</td>\n",
+       "      <td>no</td>\n",
+       "      <td>0</td>\n",
+       "      <td>243.4</td>\n",
+       "      <td>114</td>\n",
+       "      <td>41.38</td>\n",
+       "      <td>...</td>\n",
+       "      <td>110</td>\n",
+       "      <td>10.30</td>\n",
+       "      <td>162.6</td>\n",
+       "      <td>104</td>\n",
+       "      <td>7.32</td>\n",
+       "      <td>12.2</td>\n",
+       "      <td>5</td>\n",
+       "      <td>3.29</td>\n",
+       "      <td>0</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>OH</td>\n",
+       "      <td>84</td>\n",
+       "      <td>408</td>\n",
+       "      <td>375-9999</td>\n",
+       "      <td>yes</td>\n",
+       "      <td>no</td>\n",
+       "      <td>0</td>\n",
+       "      <td>299.4</td>\n",
+       "      <td>71</td>\n",
+       "      <td>50.90</td>\n",
+       "      <td>...</td>\n",
+       "      <td>88</td>\n",
+       "      <td>5.26</td>\n",
+       "      <td>196.9</td>\n",
+       "      <td>89</td>\n",
+       "      <td>8.86</td>\n",
+       "      <td>6.6</td>\n",
+       "      <td>7</td>\n",
+       "      <td>1.78</td>\n",
+       "      <td>2</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>OK</td>\n",
+       "      <td>75</td>\n",
+       "      <td>415</td>\n",
+       "      <td>330-6626</td>\n",
+       "      <td>yes</td>\n",
+       "      <td>no</td>\n",
+       "      <td>0</td>\n",
+       "      <td>166.7</td>\n",
+       "      <td>113</td>\n",
+       "      <td>28.34</td>\n",
+       "      <td>...</td>\n",
+       "      <td>122</td>\n",
+       "      <td>12.61</td>\n",
+       "      <td>186.9</td>\n",
+       "      <td>121</td>\n",
+       "      <td>8.41</td>\n",
+       "      <td>10.1</td>\n",
+       "      <td>3</td>\n",
+       "      <td>2.73</td>\n",
+       "      <td>3</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>AL</td>\n",
+       "      <td>118</td>\n",
+       "      <td>510</td>\n",
+       "      <td>391-8027</td>\n",
+       "      <td>yes</td>\n",
+       "      <td>no</td>\n",
+       "      <td>0</td>\n",
+       "      <td>223.4</td>\n",
+       "      <td>98</td>\n",
+       "      <td>37.98</td>\n",
+       "      <td>...</td>\n",
+       "      <td>101</td>\n",
+       "      <td>18.75</td>\n",
+       "      <td>203.9</td>\n",
+       "      <td>118</td>\n",
+       "      <td>9.18</td>\n",
+       "      <td>6.3</td>\n",
+       "      <td>6</td>\n",
+       "      <td>1.70</td>\n",
+       "      <td>0</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>MA</td>\n",
+       "      <td>121</td>\n",
+       "      <td>510</td>\n",
+       "      <td>355-9993</td>\n",
+       "      <td>no</td>\n",
+       "      <td>yes</td>\n",
+       "      <td>24</td>\n",
+       "      <td>218.2</td>\n",
+       "      <td>88</td>\n",
+       "      <td>37.09</td>\n",
+       "      <td>...</td>\n",
+       "      <td>108</td>\n",
+       "      <td>29.62</td>\n",
+       "      <td>212.6</td>\n",
+       "      <td>118</td>\n",
+       "      <td>9.57</td>\n",
+       "      <td>7.5</td>\n",
+       "      <td>7</td>\n",
+       "      <td>2.03</td>\n",
+       "      <td>3</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>MO</td>\n",
+       "      <td>147</td>\n",
+       "      <td>415</td>\n",
+       "      <td>329-9001</td>\n",
+       "      <td>yes</td>\n",
+       "      <td>no</td>\n",
+       "      <td>0</td>\n",
+       "      <td>157.0</td>\n",
+       "      <td>79</td>\n",
+       "      <td>26.69</td>\n",
+       "      <td>...</td>\n",
+       "      <td>94</td>\n",
+       "      <td>8.76</td>\n",
+       "      <td>211.8</td>\n",
+       "      <td>96</td>\n",
+       "      <td>9.53</td>\n",
+       "      <td>7.1</td>\n",
+       "      <td>6</td>\n",
+       "      <td>1.92</td>\n",
+       "      <td>0</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>LA</td>\n",
+       "      <td>117</td>\n",
+       "      <td>408</td>\n",
+       "      <td>335-4719</td>\n",
+       "      <td>no</td>\n",
+       "      <td>no</td>\n",
+       "      <td>0</td>\n",
+       "      <td>184.5</td>\n",
+       "      <td>97</td>\n",
+       "      <td>31.37</td>\n",
+       "      <td>...</td>\n",
+       "      <td>80</td>\n",
+       "      <td>29.89</td>\n",
+       "      <td>215.8</td>\n",
+       "      <td>90</td>\n",
+       "      <td>9.71</td>\n",
+       "      <td>8.7</td>\n",
+       "      <td>4</td>\n",
+       "      <td>2.35</td>\n",
+       "      <td>1</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>WV</td>\n",
+       "      <td>141</td>\n",
+       "      <td>415</td>\n",
+       "      <td>330-8173</td>\n",
+       "      <td>yes</td>\n",
+       "      <td>yes</td>\n",
+       "      <td>37</td>\n",
+       "      <td>258.6</td>\n",
+       "      <td>84</td>\n",
+       "      <td>43.96</td>\n",
+       "      <td>...</td>\n",
+       "      <td>111</td>\n",
+       "      <td>18.87</td>\n",
+       "      <td>326.4</td>\n",
+       "      <td>97</td>\n",
+       "      <td>14.69</td>\n",
+       "      <td>11.2</td>\n",
+       "      <td>5</td>\n",
+       "      <td>3.02</td>\n",
+       "      <td>0</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>10 rows × 21 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  state  account length  area code phone number international plan  \\\n",
+       "0    KS             128        415     382-4657                 no   \n",
+       "1    OH             107        415     371-7191                 no   \n",
+       "2    NJ             137        415     358-1921                 no   \n",
+       "3    OH              84        408     375-9999                yes   \n",
+       "4    OK              75        415     330-6626                yes   \n",
+       "5    AL             118        510     391-8027                yes   \n",
+       "6    MA             121        510     355-9993                 no   \n",
+       "7    MO             147        415     329-9001                yes   \n",
+       "8    LA             117        408     335-4719                 no   \n",
+       "9    WV             141        415     330-8173                yes   \n",
+       "\n",
+       "  voice mail plan  number vmail messages  total day minutes  total day calls  \\\n",
+       "0             yes                     25              265.1              110   \n",
+       "1             yes                     26              161.6              123   \n",
+       "2              no                      0              243.4              114   \n",
+       "3              no                      0              299.4               71   \n",
+       "4              no                      0              166.7              113   \n",
+       "5              no                      0              223.4               98   \n",
+       "6             yes                     24              218.2               88   \n",
+       "7              no                      0              157.0               79   \n",
+       "8              no                      0              184.5               97   \n",
+       "9             yes                     37              258.6               84   \n",
+       "\n",
+       "   total day charge  ...  total eve calls  total eve charge  \\\n",
+       "0             45.07  ...               99             16.78   \n",
+       "1             27.47  ...              103             16.62   \n",
+       "2             41.38  ...              110             10.30   \n",
+       "3             50.90  ...               88              5.26   \n",
+       "4             28.34  ...              122             12.61   \n",
+       "5             37.98  ...              101             18.75   \n",
+       "6             37.09  ...              108             29.62   \n",
+       "7             26.69  ...               94              8.76   \n",
+       "8             31.37  ...               80             29.89   \n",
+       "9             43.96  ...              111             18.87   \n",
+       "\n",
+       "   total night minutes  total night calls  total night charge  \\\n",
+       "0                244.7                 91               11.01   \n",
+       "1                254.4                103               11.45   \n",
+       "2                162.6                104                7.32   \n",
+       "3                196.9                 89                8.86   \n",
+       "4                186.9                121                8.41   \n",
+       "5                203.9                118                9.18   \n",
+       "6                212.6                118                9.57   \n",
+       "7                211.8                 96                9.53   \n",
+       "8                215.8                 90                9.71   \n",
+       "9                326.4                 97               14.69   \n",
+       "\n",
+       "   total intl minutes  total intl calls  total intl charge  \\\n",
+       "0                10.0                 3               2.70   \n",
+       "1                13.7                 3               3.70   \n",
+       "2                12.2                 5               3.29   \n",
+       "3                 6.6                 7               1.78   \n",
+       "4                10.1                 3               2.73   \n",
+       "5                 6.3                 6               1.70   \n",
+       "6                 7.5                 7               2.03   \n",
+       "7                 7.1                 6               1.92   \n",
+       "8                 8.7                 4               2.35   \n",
+       "9                11.2                 5               3.02   \n",
+       "\n",
+       "   customer service calls  churn  \n",
+       "0                       1  False  \n",
+       "1                       1  False  \n",
+       "2                       0  False  \n",
+       "3                       2  False  \n",
+       "4                       3  False  \n",
+       "5                       0  False  \n",
+       "6                       3  False  \n",
+       "7                       0  False  \n",
+       "8                       1  False  \n",
+       "9                       0  False  \n",
+       "\n",
+       "[10 rows x 21 columns]"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#see first ten columns of the df\n",
+    "df_loader.get_head()"
    ]
   },
   {
@@ -309,6 +714,13 @@
    "source": [
     "# Get shape of the data frame\n",
     "df_loader.get_shape()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Seeing that I have sufficient data points I can now proceed with the rest of the project without need to scrape or get more data elsewhere."
    ]
   },
   {
@@ -435,15 +847,26 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "DATA PREPARATION\n"
+    "DATA PREPARATION\n",
+    "In this phase, which is often referred to as “data munging”, we will perform data cleaning, conduct exploratory data analysis (EDA), and data preprocessing."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "No duplicate rows found in the DataFrame.\n"
+     ]
+    }
+   ],
+   "source": [
+    "df_loader.check_duplicates()\n"
+   ]
   }
  ],
  "metadata": {
