do univariate analysis

--- a/Syria Tel Churn Prediction.ipynb
+++ b/Syria Tel Churn Prediction.ipynb
@@ -183,7 +183,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -229,7 +229,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
@@ -301,6 +301,21 @@
     "            print(self.data.info())\n",
     "        else:\n",
     "            print(\"Data not loaded yet. Please call the load_data() method first.\")\n",
+    "    def handle_missing_values(self):\n",
+    "        if self.data is not None:\n",
+    "            for col in self.data.columns:\n",
+    "                try:\n",
+    "                    # Attempt to convert column to numeric; if fails, it's likely categorical\n",
+    "                    pd.to_numeric(self.data[col], errors='coerce')\n",
+    "                    # Replace missing values with mean for numerical columns\n",
+    "                    self.data[col].fillna(self.data[col].mean(), inplace=True)\n",
+    "                except ValueError:\n",
+    "                    # Column is categorical, replace missing values with mode\n",
+    "                    self.data[col].fillna(self.data[col].mode()[0], inplace=True)\n",
+    "            print(\"Missing values handled.\")\n",
+    "        else:\n",
+    "            print(\"Data not loaded yet. Please call the load_data() method first.\")\n",
+    "\n",
     "\n",
     "    def describe_data(self):\n",
     "        \"\"\"\n",
@@ -372,7 +387,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [
     {
@@ -399,13 +414,14 @@
        "      <th>state</th>\n",
        "      <th>account length</th>\n",
        "      <th>area code</th>\n",
+       "      <th>phone number</th>\n",
        "      <th>international plan</th>\n",
        "      <th>voice mail plan</th>\n",
        "      <th>number vmail messages</th>\n",
        "      <th>total day minutes</th>\n",
        "      <th>total day calls</th>\n",
        "      <th>total day charge</th>\n",
-       "      <th>total eve minutes</th>\n",
+       "      <th>...</th>\n",
        "      <th>total eve calls</th>\n",
        "      <th>total eve charge</th>\n",
        "      <th>total night minutes</th>\n",
@@ -417,43 +433,21 @@
        "      <th>customer service calls</th>\n",
        "      <th>churn</th>\n",
        "    </tr>\n",
-       "    <tr>\n",
-       "      <th>phone number</th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>382-4657</th>\n",
+       "      <th>0</th>\n",
        "      <td>KS</td>\n",
        "      <td>128</td>\n",
        "      <td>415</td>\n",
+       "      <td>382-4657</td>\n",
        "      <td>no</td>\n",
        "      <td>yes</td>\n",
        "      <td>25</td>\n",
        "      <td>265.1</td>\n",
        "      <td>110</td>\n",
        "      <td>45.07</td>\n",
-       "      <td>197.4</td>\n",
+       "      <td>...</td>\n",
        "      <td>99</td>\n",
        "      <td>16.78</td>\n",
        "      <td>244.7</td>\n",
@@ -466,17 +460,18 @@
        "      <td>False</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>371-7191</th>\n",
+       "      <th>1</th>\n",
        "      <td>OH</td>\n",
        "      <td>107</td>\n",
        "      <td>415</td>\n",
+       "      <td>371-7191</td>\n",
        "      <td>no</td>\n",
        "      <td>yes</td>\n",
        "      <td>26</td>\n",
        "      <td>161.6</td>\n",
        "      <td>123</td>\n",
        "      <td>27.47</td>\n",
-       "      <td>195.5</td>\n",
+       "      <td>...</td>\n",
        "      <td>103</td>\n",
        "      <td>16.62</td>\n",
        "      <td>254.4</td>\n",
@@ -489,17 +484,18 @@
        "      <td>False</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>358-1921</th>\n",
+       "      <th>2</th>\n",
        "      <td>NJ</td>\n",
        "      <td>137</td>\n",
        "      <td>415</td>\n",
+       "      <td>358-1921</td>\n",
        "      <td>no</td>\n",
        "      <td>no</td>\n",
        "      <td>0</td>\n",
        "      <td>243.4</td>\n",
        "      <td>114</td>\n",
        "      <td>41.38</td>\n",
-       "      <td>121.2</td>\n",
+       "      <td>...</td>\n",
        "      <td>110</td>\n",
        "      <td>10.30</td>\n",
        "      <td>162.6</td>\n",
@@ -512,17 +508,18 @@
        "      <td>False</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>375-9999</th>\n",
+       "      <th>3</th>\n",
        "      <td>OH</td>\n",
        "      <td>84</td>\n",
        "      <td>408</td>\n",
+       "      <td>375-9999</td>\n",
        "      <td>yes</td>\n",
        "      <td>no</td>\n",
        "      <td>0</td>\n",
        "      <td>299.4</td>\n",
        "      <td>71</td>\n",
        "      <td>50.90</td>\n",
-       "      <td>61.9</td>\n",
+       "      <td>...</td>\n",
        "      <td>88</td>\n",
        "      <td>5.26</td>\n",
        "      <td>196.9</td>\n",
@@ -535,17 +532,18 @@
        "      <td>False</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>330-6626</th>\n",
+       "      <th>4</th>\n",
        "      <td>OK</td>\n",
        "      <td>75</td>\n",
        "      <td>415</td>\n",
+       "      <td>330-6626</td>\n",
        "      <td>yes</td>\n",
        "      <td>no</td>\n",
        "      <td>0</td>\n",
        "      <td>166.7</td>\n",
        "      <td>113</td>\n",
        "      <td>28.34</td>\n",
-       "      <td>148.3</td>\n",
+       "      <td>...</td>\n",
        "      <td>122</td>\n",
        "      <td>12.61</td>\n",
        "      <td>186.9</td>\n",
@@ -559,67 +557,56 @@
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
+       "<p>5 rows × 21 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "             state  account length  area code international plan  \\\n",
-       "phone number                                                       \n",
-       "382-4657        KS             128        415                 no   \n",
-       "371-7191        OH             107        415                 no   \n",
-       "358-1921        NJ             137        415                 no   \n",
-       "375-9999        OH              84        408                yes   \n",
-       "330-6626        OK              75        415                yes   \n",
+       "  state  account length  area code phone number international plan  \\\n",
+       "0    KS             128        415     382-4657                 no   \n",
+       "1    OH             107        415     371-7191                 no   \n",
+       "2    NJ             137        415     358-1921                 no   \n",
+       "3    OH              84        408     375-9999                yes   \n",
+       "4    OK              75        415     330-6626                yes   \n",
        "\n",
-       "             voice mail plan  number vmail messages  total day minutes  \\\n",
-       "phone number                                                             \n",
-       "382-4657                 yes                     25              265.1   \n",
-       "371-7191                 yes                     26              161.6   \n",
-       "358-1921                  no                      0              243.4   \n",
-       "375-9999                  no                      0              299.4   \n",
-       "330-6626                  no                      0              166.7   \n",
+       "  voice mail plan  number vmail messages  total day minutes  total day calls  \\\n",
+       "0             yes                     25              265.1              110   \n",
+       "1             yes                     26              161.6              123   \n",
+       "2              no                      0              243.4              114   \n",
+       "3              no                      0              299.4               71   \n",
+       "4              no                      0              166.7              113   \n",
        "\n",
-       "              total day calls  total day charge  total eve minutes  \\\n",
-       "phone number                                                         \n",
-       "382-4657                  110             45.07              197.4   \n",
-       "371-7191                  123             27.47              195.5   \n",
-       "358-1921                  114             41.38              121.2   \n",
-       "375-9999                   71             50.90               61.9   \n",
-       "330-6626                  113             28.34              148.3   \n",
+       "   total day charge  ...  total eve calls  total eve charge  \\\n",
+       "0             45.07  ...               99             16.78   \n",
+       "1             27.47  ...              103             16.62   \n",
+       "2             41.38  ...              110             10.30   \n",
+       "3             50.90  ...               88              5.26   \n",
+       "4             28.34  ...              122             12.61   \n",
        "\n",
-       "              total eve calls  total eve charge  total night minutes  \\\n",
-       "phone number                                                           \n",
-       "382-4657                   99             16.78                244.7   \n",
-       "371-7191                  103             16.62                254.4   \n",
-       "358-1921                  110             10.30                162.6   \n",
-       "375-9999                   88              5.26                196.9   \n",
-       "330-6626                  122             12.61                186.9   \n",
+       "   total night minutes  total night calls  total night charge  \\\n",
+       "0                244.7                 91               11.01   \n",
+       "1                254.4                103               11.45   \n",
+       "2                162.6                104                7.32   \n",
+       "3                196.9                 89                8.86   \n",
+       "4                186.9                121                8.41   \n",
        "\n",
-       "              total night calls  total night charge  total intl minutes  \\\n",
-       "phone number                                                              \n",
-       "382-4657                     91               11.01                10.0   \n",
-       "371-7191                    103               11.45                13.7   \n",
-       "358-1921                    104                7.32                12.2   \n",
-       "375-9999                     89                8.86                 6.6   \n",
-       "330-6626                    121                8.41                10.1   \n",
+       "   total intl minutes  total intl calls  total intl charge  \\\n",
+       "0                10.0                 3               2.70   \n",
+       "1                13.7                 3               3.70   \n",
+       "2                12.2                 5               3.29   \n",
+       "3                 6.6                 7               1.78   \n",
+       "4                10.1                 3               2.73   \n",
        "\n",
-       "              total intl calls  total intl charge  customer service calls  \\\n",
-       "phone number                                                                \n",
-       "382-4657                     3               2.70                       1   \n",
-       "371-7191                     3               3.70                       1   \n",
-       "358-1921                     5               3.29                       0   \n",
-       "375-9999                     7               1.78                       2   \n",
-       "330-6626                     3               2.73                       3   \n",
+       "   customer service calls  churn  \n",
+       "0                       1  False  \n",
+       "1                       1  False  \n",
+       "2                       0  False  \n",
+       "3                       2  False  \n",
+       "4                       3  False  \n",
        "\n",
-       "              churn  \n",
-       "phone number         \n",
-       "382-4657      False  \n",
-       "371-7191      False  \n",
-       "358-1921      False  \n",
-       "375-9999      False  \n",
-       "330-6626      False  "
+       "[5 rows x 21 columns]"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 51,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -631,7 +618,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [
     {
@@ -656,7 +643,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [
     {
@@ -709,7 +696,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [
     {
@@ -784,7 +771,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [
     {
@@ -803,7 +790,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "In as much as we don't have any missing values and duplicate values we can further investigate the different columns to see how we caa further clean the data and manipulate the different columns.\n",
+    "In as much as we don't have any missing values and duplicate values we can further investigate the different columns to see how we can further clean the data and manipulate the different columns.\n",
     "Since we have confirmed that there are no duplicates or missing values in our dataset, we can use the phone number column as our index to identify each customer.\n",
     "The logic here is that each customer has a unique phone number.\n",
     "\n",
@@ -812,7 +799,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -835,7 +822,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [
     {
@@ -1082,7 +1069,7 @@
        "330-6626      False  "
       ]
      },
-     "execution_count": 39,
+     "execution_count": 57,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1091,6 +1078,22 @@
     "#making sure the changes have been effected\n",
     "df_loader.get_head()"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "EXPLORATORY DATA ANALYSIS(EDA)\n",
+    "\n",
+    "Seeing that we don't have much cleaning to do we can now proceed to the next bit of our project.\n",
+    "\n",
+    "This section focuses on exploring and understanding the dataset to uncover patterns, identify variable relationships, detect outliers, and gain insights before applying modeling or statistical techniques. We will conduct a comprehensive exploration using univariate, bivariate, and multivariate analysis to identify correlations and variable distributions, essential for feature engineering and modeling.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   },
   {
    "cell_type": "code",
